--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -75,3 +75,64 @@
 .postCommentsIcon span {
   margin-left: 7px;
 }
+.postCommentBox {
+  padding: 10px 10px;
+}
+.postCommentBox input {
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;
+  height: 35px;
+  margin: 0 auto;
+  width: 100%;
+  font-size: 15px;
+  box-sizing: border-box;
+  padding: 5px;
+}
+.postCommentBox input:focus {
+  outline: none;
+}
+.postCommentsList {
+  padding: 5px 10px;
+  position: relative;
+}
+.postCommentItem {
+  background: #eceffa;
+  border-radius: 4px;
+  padding: 10px;
+  margin-bottom: 14px;
+}
+.postCommentHeader {
+  display: flex;
+}
+.postCommentHeader .postCommentAuthor {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 16px;
+  color: #757575;
+}
+.postCommentHeader .postCommentTime {
+  font-size: 12px;
+  line-height: 16px;
+  color: #9e9e9e;
+  margin-left: 8px;
+}
+.postCommentHeader .postCommentLikes {
+  font-size: 12px;
+  line-height: 16px;
+  color: #616161;
+  margin-left: 8px;
+}
+.postCommentContent {
+  margin-top: 7px;
+}
+.postCommentsList .commentLike {
+  position: absolute;
+  right: 21px;
+  top: 13px;
+}
+.postCommentsList .commentLike img {
+  height: 20px;
+}
+.postCommentsList .commentLike img:hover {
+  cursor: pointer;
+}
