--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,6 +1,6 @@
 .nav {
   display: flex;
-  background: #6200ee;
+  background: #4fbae9;
   padding: 10px 20px;
   align-items: center;
   justify-content: space-between;
