create search bar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,7 +20,7 @@ code {
   height: 50px;
   border: 3px solid #d6d6d6;
   border-radius: 50%;
-  border-top-color: #6200ee;
+  border-top-color: #6e83b7;
   animation: spin 1s linear infinite;
   -webkit-animation: spin 1s linear infinite;
   margin-right: 10px;
